--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
   <script src="app/lib/angular.min"></script>
   </head>
-  <body>
+  <body ng-init = "color = 'blue'"><!--allow us to load data when application loads-->
+  <!--two way data binding-->
     <input type="text" ng-model="favmeat" placeholder="enter your fav meat"/>
     <p>your fav meat is {{favmeat}}</p>
+    <p class='blue'>i dont knoe why</p>
 </body>
 </html>
