--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <title>TheNetNinja Angular Playlist</title>
     <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
   <script src="app/lib/angular.min"></script>
+  <script src='app/app.js'></script>
   </head>
-  <body ng-init = "ninja=['yoshi','crystal','pmk00']"><!--allow us to load data when application loads-->
+  <body><!--allow us to load data when application loads-->
   <!--two way data binding-->
-    <input type="text" ng-model="favmeat" placeholder="enter your fav meat"/>
-    <p>your fav meat is {{favmeat}}</p>
-    <ul>
-      <li ng-repeat="ninja in ninja">{{ninja}}</li>
+  <div ng-controller='NinjaController'>
 
+    <p>{{message}}</p>
+    <ul>
+      <li ng-repeat='ninja in ninjas'>{{ninja}}</li>
     </ul>
+  </div>
 </body>
 </html>
