--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body><!--allow us to load data when application loads-->
   <!--two way data binding-->
-  <div ng-controller='NinjaController'>
-
+  <div ng-controller='NinjaController' >
+    <input type="text" ng-model="search"/>
     <p>{{message}}</p>
     <ul>
-      <li ng-repeat='ninja in ninjas'>{{ninja}}</li>
+      <li ng-repeat='ninja in ninjas | orderBy: "name" | filter: search '>{{ninja.name}} - {{ninja.rate | currency}}</li>
     </ul>
   </div>
 </body>
