--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   </head>
   <body><!--allow us to load data when application loads-->
   <!--two way data binding-->
+<header ng-include="'header.html'"></header>
+<div class="content">
   <div ng-controller='NinjaController' >
     <input type="text" ng-model="search"/>
     <p>{{message}}</p>
     <ul>
-      <li ng-repeat='ninja in ninjas | orderBy: "name" | filter: search '>{{ninja.name}} - {{ninja.rate | currency}}</li>
+      <li ng-repeat='ninja in ninjas | orderBy: "name" | filter: search ' ng-show="!ninja.available">{{ninja.name}} - {{ninja.rate | currency}}</li>
     </ul>
   </div>
+</div>
 </body>
 </html>
